# AnnotateValues

./: .fuse_hidden000eb7560000000c  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: Util.cmake
include/: AnnotateInstructions.hpp  AnnotateInstructionsPass.hpp  AnnotateLoops.hpp  AnnotateLoopsPass.hpp  BWList.hpp  Config.hpp.in  Debug.hpp  Stats.hpp  Util.hpp  Utils.hpp
include/AnnotateValues/: AnnotateInstructions.hpp  AnnotateInstructionsPass.hpp  AnnotateLoops.hpp  AnnotateLoopsPass.hpp  BWList.hpp  Debug.hpp  Stats.hpp  Util.hpp
lib/: AnnotateInstructions.cpp  AnnotateInstructionsPass.cpp  AnnotateLoops.cpp  AnnotateLoopsPass.cpp  CommonCommandLineOptions.cpp  Debug.cpp  Stats.cpp
share/cmake/: config.cmake.in
tests/: CMakeLists.txt  test01.ll  test02.ll  test03.ll  test04.ll  test05.ll
tests/data/output/: test05-report.txt
unittests/: BasicTests.cpp  CMakeLists.txt  TestAnnotateLoops.cpp
unittests/data/: exit_call_loop.ll  regular_loop.ll  test02.ll
unittests/include/: TestCommon.hpp  TestIRAssemblyParser.hpp
utils/scripts/: build.sh
utils/scripts/run/: run-av.sh.in
